# ai-cc-proj

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1e0e2ea97e2f_foundation_roles_bitfinex_nav_shares_.py  3ebf341ea407_init_users.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  admin_accounts.py  admin_earnings.py  admin_pipeline.py  admin_users.py  auth.py  user_me.py  users.py
backend/app/core/: config.py  encryption.py  security.py
backend/app/models/: __init__.py  bitfinex_account.py  daily_nav.py  funding_record.py  product_config.py  share_transaction.py  user.py  user_share_snapshot.py
backend/app/schemas/: admin_earnings.py  admin_users.py  auth.py  bitfinex.py  pipeline.py  user.py  user_me.py
backend/app/services/: bitfinex_client.py  pipeline.py  scheduler.py
backend/tests/: test_admin_dep.py  test_admin_earnings.py  test_admin_pipeline.py  test_admin_users.py  test_bitfinex_client.py  test_encryption.py  test_pipeline_math.py  test_product_config.py  test_role_assignment.py  test_startup_validation.py  test_user_me.py
docs/: architecture.md
frontend/: Dockerfile  auth.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/types/: next-auth.d.ts
(+18 files in other folders)
